@@ -1,4 +1,7 @@
 ###### TWE 4.5-1 RELEASED ######
+2012-04-09 Sasa Bojanic <sasaboy@together.at>
+   # signing JAR files with Together certificate
+
 2012-02-23 Sasa Bojanic <sasaboy@together.at>
    # Compiled code can be executed only with Java7
 
